crates/hir/src/tests/snapshots/main_ty_antn.snap
---
source: crates/hir/src/tests.rs
assertion_line: 53
expression: "(test[1], res)"
---
- "\nfn main() -> int { }\n"
- Err: "main()'s return value shouldn't be annotated. Found `int32`"

