crates/hir/src/tests/snapshots/redefined_fn_basic.snap
---
source: crates/hir/src/tests.rs
assertion_line: 48
expression: "(test[1], res)"
---
- "\nfn foo() {}\nfn bar() {}\nfn foo() {}\n"
- Err: "Function `foo` can't be redefined"

