crates/hir/src/tests/snapshots/scope_basic_shadowing.snap
---
source: crates/hir/src/tests.rs
assertion_line: 183
expression: "(test[1], res)"
---
- "\nfn foo(a: int) -> int {\n    let b: int = 1\n    {\n        let b: bool = false\n    }\n    b\n}\n"
- Ok:
    nodes:
      - Stmt:
          Fn:
            proto:
              name: foo
              args:
                - - a
                  - Int32
              ret_ty: Int32
            body:
              Expr:
                Block:
                  list:
                    - Stmt:
                        Let:
                          name: b
                          antn: Int32
                          init:
                            Expr:
                              Lit:
                                value:
                                  UInt64: 1
                                ty: ~
                    - Expr:
                        Block:
                          list:
                            - Stmt:
                                Let:
                                  name: b
                                  antn: Bool
                                  init:
                                    Expr:
                                      Lit:
                                        value:
                                          Bool: false
                                        ty: ~
                          ty: ~
                    - Expr:
                        Ident:
                          name: b
                          ty: ~
                  ty: ~

